--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,12 @@
             <div class="panel" id="puntuaciones" data-title="Puntuaciones">
                 Mejores puntuaciones en partidas
             </div>
+            <div class="panel" id="formulario" data-title="Tus puntos">
+                Formulario para meter nuestro nombre.
+                (Cuando acabo una partida)
+                Puntos.
+                Tiempo.
+            </div>
             <div class="panel" id="creditos" odata-title="Creditos">
                 Créditos de la aplicación
                 <h3>Bibliografía</h3>
