--- a/www/index.html
+++ b/www/index.html
@@ -96,6 +96,9 @@
                     <li><a href="https://i.ytimg.com/vi/syTLh93ZL74/maxresdefault.jpg">Barco Inicio</a></li>
                 </ul>
             </div>
+            <div class="panel" id="configuracion" data-title="Configuracion">
+                Página de configuración de la aplicación.
+            </div>
         </div>
 
         <nav id="left">
@@ -109,6 +112,7 @@
                             <li><a href="#inicio" onclick="$.afui.clearHistory()">Página de Inicio</a></li>
                             <li><a href="#partida" onclick="$.afui.clearHistory(); crearPartida(8,8);">Partida</a></li>
                             <li><a href="#puntuaciones" onclick="$.afui.clearHistory(); document.getElementById('audio').play();">Mejores puntuaciones</a></li>
+                            <li><a href="#configuracion" onclick="$.afui.clearHistory()">Configuración</a></li>
                             <li><a href="#creditos" onclick="$.afui.clearHistory()">Créditos</a></li>
                         </ul>
                     </div>
