--- a/www/index.html
+++ b/www/index.html
@@ -49,9 +49,8 @@
         
         <div class="pages">
             <div class="panel" id="inicio" data-title="Inicio" data-selected="true">
-                Página de Inicio
                 <br>
-                <img src="img/battleshipMaincra.jpg" width="100%">
+                <img src="img/fondoInicio.png" width="100%">
             </div>
             <div class="panel container" id="partida" data-title="Partida">
                 <div class="row"> <!-- Esta caja para el tiempo y los disparos -->
