Algunos retoques mas...(2)

--- a/www/index.html
+++ b/www/index.html
@@ -153,8 +153,9 @@
                             <input class="form-control input-sm" id="numeroSubmarinos" type="number" min="0" max="5" placeholder="(0-5)" required>   
                         </div>                    
                         <div class="container">
-                            <button class="btn btn-default" onclick="guardarConfiguracion();">Guardar</button>
-                            <button class="btn btn-default" onclick="establecerConfiguracionPredeterminada();">Configuración predeterminada</button>
+                            <!-- Uso h1 ya que en el simulador si usamos button se actualiza la pagina -->
+                            <h1 class="btn btn-default" onclick="guardarConfiguracion();">Guardar</h1>
+                            <h1 class="btn btn-default" onclick="establecerConfiguracionPredeterminada();">Configuración predeterminada</h1>
                         </div>
                         <br>
                  </form>
